--- a/workerpool/.github/workflows/workflow.yml
+++ b/workerpool/.github/workflows/workflow.yml
@@ -1,3 +1,5 @@
+on: push
+
 jobs:
   test:
     runs-on: ubuntu-20.04
@@ -10,4 +12,3 @@ jobs:
         go-version: 1.17
     - name: test
       run: go test -race ./...
-
